# AI-

./: .gitignore
ai-glasses-firmware/: CMakeLists.txt
ai-glasses-firmware/config/: config.example.env
ai-glasses-firmware/docs/: features.md
ai-glasses-firmware/src/: main.cpp
ai-glasses-firmware/src/comm/: BleClient.cpp  BleClient.h  CoapClient.cpp  CoapClient.h  HttpClient.cpp  HttpClient.h  MqttClient.cpp  MqttClient.h  NetworkUtils.h  NtpClient.cpp  NtpClient.h  OpcUaClient.cpp  OpcUaClient.h  UdpBroadcaster.cpp  UdpBroadcaster.h  WebServer.cpp  WebServer.h
ai-glasses-firmware/src/core/: ConfigManager.cpp  ConfigManager.h  ConfigSpec.cpp  ConfigSpec.h  EventBus.cpp  EventBus.h  LogManager.cpp  LogManager.h
ai-glasses-firmware/src/perception/: AlsSensor.cpp  AlsSensor.h  AudioInput.cpp  AudioInput.h  GpsSensor.cpp  GpsSensor.h  ImuSensor.cpp  ImuSensor.h  KalmanFilter1D.h  PowerSensor.cpp  PowerSensor.h  SensorFusion.cpp  SensorFusion.h
ai-glasses-firmware/src/render/: ArRenderer.cpp  ArRenderer.h
ai-glasses-firmware/tests/: CMakeLists.txt  test_config.cpp  test_config_spec.cpp  test_event_bus.cpp  test_event_bus_backpressure.cpp  test_gps.cpp  test_http.cpp  test_http_concurrency.cpp  test_sanity.cpp  test_sensor_fusion.cpp  test_udp.cpp
docs/superpowers/plans/: 2026-04-15-als-http.md  2026-04-15-audio-coap.md  2026-04-15-power-ntp.md  2026-04-15-websocket-imu.md
docs/superpowers/specs/: 2026-04-15-als-http-design.md  2026-04-15-audio-coap-design.md  2026-04-15-gps-udp-design.md  2026-04-15-p1-optimizations.md  2026-04-15-power-ntp-design.md  2026-04-15-sensor-fusion-design.md  2026-04-15-websocket-imu-design.md
mocks/catch2/: Catch2Config.cmake  Catch2ConfigVersion.cmake  mock_main.cpp
mocks/catch2/catch2/: catch_test_macros.hpp
mocks/catch_cmake/: Catch.cmake
mocks/opencv/: OpenCVConfig.cmake
mocks/opencv/include/opencv2/: opencv.hpp
